# maktaba

./: Cargo.toml  README.md
.cargo/: config.toml
frontend/: components.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: schema.js  utils.js
frontend/src/lib/components/: app-header.svelte  app-sidebar.svelte  auth-alert.svelte
frontend/src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte
frontend/src/lib/hooks/: is-mobile.svelte.js
frontend/src/lib/state/: auth.svelte.js
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  Counter.svelte  Header.svelte
frontend/src/routes/(dashboard)/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
migrations/: 20250116131809_init.down.sql  20250116131809_init.up.sql  20250123075254_triggers.down.sql  20250123075254_triggers.up.sql
src/: assets.rs  auth.rs  error.rs  main.rs  state.rs
src/extractors/: json.rs  path.rs
src/middlewares/: log.rs  mod.rs  role.rs
src/model/: book.rs  borrowing.rs  category.rs  error.rs  fine.rs  mod.rs  reservation.rs  review.rs  user.rs
src/model/fixtures/: books.sql  borrowing.sql  users.sql
src/routes/: auth.rs  book.rs  borrowing.rs  category.rs  fine.rs  mod.rs  reservation.rs  review.rs  user.rs
(+158 files in other folders)
