[package]
name = "maktaba"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
listenfd = "1.0.2"
mime_guess = "2.0.5"
modql = { version = "0.4.1", features = ["with-sea-query"] }
rust-embed = "8.5.0"
sea-query = { version = "0.32.1", features = ["with-chrono"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-sqlite", "sqlx-postgres", "with-chrono", "with-uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "sqlite", "macros", "uuid", "migrate", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "trace", "timeout", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
